--- a/css/style.css
+++ b/css/style.css
@@ -96,26 +96,23 @@
 }
 
 .section-contents {
-  width;
-  300px:
-    height: 300px;
+  width: 300px;
+  height: 300px;
+  display: inline-block;
 }
 
 .skills_1,
 .skills_2,
 .skills_3 {
-  margin: auto hspapase="100" vspase="100";
+  margin-right: 100px;
+  margin-bottom: 100px;
 }
 
 .skills_4,
 .skills_5,
 .skills_6 {
-  margin-bottom: 70px;
-}
-
-.skills_5 {
-  margin-left: 100px;
   margin-right: 100px;
+  margin-bottom: 70px;
 }
 
 .plan {
@@ -168,6 +165,9 @@
 
 .sns {
   background: #e3f2fd;
+}
+
+.sns-icons {
   color: #8c8c8c;
   overflow: hidden;
   font-size: 40px;
@@ -176,8 +176,11 @@
   padding: 200px 0px;
 }
 
-.copyright {
+.footer-inner {
   background: #cfd8dc;
+}
+
+.copyright {
   float: right;
   margin-top: 20px;
   margin-bottom: 20px;
