--- a/css/style.css
+++ b/css/style.css
@@ -84,36 +84,38 @@
   word-break: break-all;
 }
 
-.skills {
-  font-size: 40px;
-  letter-spacing: 10px;
+section.skills {
   background: #fff;
-  margin-top: 50px;
+  margin-bottom: 70px;
 }
 
 .skills-title {
+  font-size: 40px;
+  letter-spacing: 10px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   text-align: center;
 }
 
-.section-contents {
+.skills-contener {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.skills img {
   width: 300px;
   height: 300px;
-  display: inline-block;
 }
 
-.skills_1,
-.skills_2,
-.skills_3 {
+.skills:not(:nth-of-type(3n)) {
   margin-right: 100px;
-  margin-bottom: 100px;
 }
 
-.skills_4,
-.skills_5,
-.skills_6 {
-  margin-right: 100px;
-  margin-bottom: 70px;
+.skills:nth-of-type(n+4) {
+  margin-top: 100px;
 }
+
+
 
 .plan {
   background: #d0dfea;
@@ -165,25 +167,40 @@
 
 .sns {
   background: #e3f2fd;
-}
-
-.sns-icons {
-  color: #8c8c8c;
-  overflow: hidden;
-  font-size: 40px;
-  font-weight: 185px;
-  letter-spacing: 25px;
   padding: 200px 0px;
 }
 
-.footer-inner {
+.sns-icons {
+  display: flex;
+  justify-content: center;
+}
+
+.icons {
+  color: #8c8c8c;
+  overflow: hidden;
+  text-align: center;
+  font-size: 40px;
+  width: 185px;
+  padding: 25px 0px;
+}
+
+.icons a {
+  color: #8c8c8c;
+  text-decoration: none;
+}
+
+footer {
   background: #cfd8dc;
 }
 
-.copyright {
-  float: right;
-  margin-top: 20px;
-  margin-bottom: 20px;
+.footer-inner {
+  display: flex;
+  justify-content: right;
+}
+
+.copy {
+  padding-top: 20px;
+  padding-bottom: 25px;
   font-size: 10px;
   letter-spacing: 0.5px;
 }
