--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,17 @@
   height: 10px;
 }
 
+.hamburger_menu {
+  display: none;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   margin-top: 15px;
   margin-bottom: 15px;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 
 .keyvisual {
@@ -163,7 +169,7 @@ section.skills {
 
 .sns {
   background: #e3f2fd;
-  padding: 175px 0px;
+  padding: 200px 0px;
 }
 
 .sns-icons {
@@ -209,25 +215,36 @@ footer {
   }
 
   .hamburger_menu {
-    margin: 0 auto;
-  }
-
-  .hamburger {
-    color: #ffffff;
-    background-color: #8c8c8c;
-    width: 40px;
-    height: 32px;
     position: relative;
+    background: #57a2c7;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+    display: block;
   }
 
-  .hamburger_bar {
-    display: block;
-    width: 100%;
-    height: 4px;
+  /*ボタン内側*/
+  .hamburger_menu span {
+    display: inline-block;
     position: absolute;
-    left: 0;
-    background: #8c8c8c;
+    left: 14px;
+    height: 3px;
+    border-radius: 2px;
+    background: #fff;
+    width: 45%;
+  }
 
+  .hamburger_menu span:nth-of-type(1) {
+    top: 15px;
+  }
+
+  .hamburger_menu span:nth-of-type(2) {
+    top: 23px;
+  }
+
+  .hamburger_menu span:nth-of-type(3) {
+    top: 31px;
   }
 
   .keyvisual {
@@ -247,7 +264,7 @@ footer {
   }
 
   .work-left img {
-    background-position: center;
+    justify-content: center;
   }
 
   .work-right,
@@ -283,7 +300,7 @@ footer {
   }
 
   /*TAB*/
-  @media screen and (max-width: 1199px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
 
     .keyvisual {
       padding: 250px 0px;
